[tool.poetry]
name = "unionml-test"
version = "0.1.0"
description = ""
authors = ["Matthew McGrath <matthew.mcgrath12@gmail.com>"]
readme = "README.md"
packages = [{include = "unionml_test"}]

[tool.poetry.dependencies]
python = "^3.8"
unionml = "^0.1.4"
scikit-learn = "^1.1.3"
cookiecutter = "^2.1.1"
fastapi = "^0.87.0"
pandas = "^1.5.2"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
